@@ -1,3 +1,7 @@
+2008-08-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdesktopappinfo.c: Remove debug spew
+
 2008-08-01  Hans Breuer  <hans@breuer.org>
 
 	* makefile.msc : add gemblembedicon
